# llm-fight-club

./: .gitignore  README.md  pyproject.toml
config/: sample.toml  sample_api.toml
dashboard/: __init__.py  __main__.py  runner.py  server.py
dashboard/static/: app.js  index.html  style.css
src/fightclub/: __main__.py
src/fightclub/arena/: __init__.py  config.py  controller.py
src/fightclub/commentator/: __init__.py  commentator.py  config.py
src/fightclub/core/: event.py
src/fightclub/event_stream/: __init__.py  packer.py  stream.py
src/fightclub/fighters/: __init__.py  anthropic.py  base.py  config.py  ollama.py  openai.py
src/fightclub/judges/: __init__.py  base.py  consistency.py  contradiction.py  llm_judge.py  memory.py  reasoning_drift.py  resistance.py
src/fightclub/orchestrator/: __init__.py  config.py  keys.py  runner.py
src/fightclub/referee/: __init__.py  config.py  referee.py
src/fightclub/scorekeeper/: __init__.py  config.py  scorekeeper.py
src/fightclub/storage/: __init__.py  config.py  storage.py
tests/arena/: test_controller.py
tests/commentator/: test_commentator.py
tests/dashboard/: test_runner.py  test_server.py
tests/fighters/: test_anthropic.py  test_config.py  test_ollama.py  test_openai.py
tests/judges/: test_llm_judge.py
tests/orchestrator/: test_cli.py  test_config.py  test_keys.py  test_runner.py
tests/referee/: test_referee.py
tests/scorekeeper/: test_scorekeeper.py
tests/storage/: test_storage.py
